[modify] add event&model example.

--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
+    "html-minify-loader": "^1.1.0",
     "minimist": "^1.2.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "vue": "^1.0.28",
+    "vue-html-loader": "^1.2.3",
     "vue-loader": "^6.0.3",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1",
-    "html-minify-loader": "^1.1.0"
+    "webpack-dev-server": "^1.16.1"
   },
   "license": "MIT",
   "engines": {
