--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "vue-example",
   "author": "Joey Fang",
   "description": "vue example code",
-  "dependencies": {},
+  "dependencies": {
+    "vue": "^2.0.1",
+    "vue-loader": "^9.5.1",
+    "vue-router": "^2.0.0"
+  },
   "devDependencies": {
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
@@ -15,9 +19,6 @@
     "minimist": "^1.2.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
-    "vue": "^1.0.28",
-    "vue-html-loader": "^1.2.3",
-    "vue-loader": "^6.0.3",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
   },
