--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "vue-example",
   "author": "Joey Fang",
   "description": "vue example code",
-  "dependencies": {
-    "vue": "^2.0.1",
-    "vue-loader": "^9.5.1",
-    "vue-router": "^2.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "bootstrap": "^3.3.7",
+    "bower": "^1.7.9",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
@@ -15,10 +13,15 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
+    "hammerjs": "^2.0.8",
     "html-minify-loader": "^1.1.0",
+    "jquery": "^3.1.1",
     "minimist": "^1.2.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
+    "vue": "^2.0.1",
+    "vue-loader": "^9.5.1",
+    "vue-router": "^2.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
   },
@@ -28,6 +31,8 @@
   },
   "scripts": {
     "build": "gulp build",
-    "app:start": "gulp app:start"
+    "app:start": "gulp app:start",
+    "dev": "gulp app:start",
+    "bower": "bower"
   }
 }
