--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {},
   "devDependencies": {
     "bootstrap": "^3.3.7",
+    "bootstrap-table": "^1.11.0",
     "bower": "^1.7.9",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
@@ -22,6 +23,7 @@
     "vue": "^2.0.1",
     "vue-loader": "^9.5.1",
     "vue-router": "^2.0.0",
+    "vuex": "^2.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
   },
